# audron_repro

./: .gitignore  Analysis.ipynb  IMPROVEMENTS.md  KAGGLE.md  README.md  VERIFICATION.md  pyproject.toml
configs/paper/: binary_augmented.yaml  binary_combined.yaml  binary_no_aug.yaml  binary_with_aug.yaml  multiclass_real.yaml  synthetic.yaml
configs/smoke/: tiny_synthetic.yaml
data/smoke_synth/manifests/: train.jsonl  val.jsonl
docs/: IPHONE_DEMO.md
scripts/: concatenate_wavs.py  run_real_data.sh  run_smoke.sh  run_synthetic_paper.sh  train_real.sh
src/audron/data/: audio.py  augment.py  dataset.py  manifests.py  synthetic.py
src/audron/models/: attention.py  audio_frontend.py  audron.py  branches.py
src/audron/scripts/: download_helpers.py  evaluate.py  export_coreml.py  export_onnx.py  inspect_model.py  listen_drone.py  plot_sliding_predictions.py  predict_audio.py  prepare_combined_binary.py  prepare_dads.py  prepare_real_data.py  prepare_synthetic_data.py  train.py
src/audron/training/: engine.py  losses.py
src/audron/utils/: config.py  io.py  metrics.py  seed.py
tests/: smoke_test.py
